--- a/dorado/secondary/features/CMakeLists.txt
+++ b/dorado/secondary/features/CMakeLists.txt
@@ -28,6 +28,7 @@ target_include_directories(dorado_secondary_features
 
 target_link_libraries(dorado_secondary_features
     PUBLIC
+        dorado_secondary_architectures
         dorado_torch_utils
         dorado_utils
     PRIVATE
