[DOR-1265] Apply new structure to dorado_secondary_features

--- a/dorado/secondary/features/CMakeLists.txt
+++ b/dorado/secondary/features/CMakeLists.txt
@@ -1,18 +1,21 @@
 add_library(dorado_secondary_features
+    # Public
+    include/secondary/features/decoder_base.h
+    include/secondary/features/decoder_factory.h
+    include/secondary/features/encoder_base.h
+    include/secondary/features/encoder_factory.h
+    include/secondary/features/haplotag_source.h
+    include/secondary/features/kadayashi_utils.h
+
+    # Private
     decoder_base.cpp
-    decoder_base.h
     decoder_factory.cpp
-    decoder_factory.h
-    encoder_base.h
     encoder_counts.cpp
     encoder_counts.h
     encoder_factory.cpp
-    encoder_factory.h
     encoder_read_alignment.cpp
     encoder_read_alignment.h
-    haplotag_source.h
     kadayashi_utils.cpp
-    kadayashi_utils.h
     medaka_bamiter.cpp
     medaka_bamiter.h
     medaka_counts.cpp
@@ -22,8 +25,8 @@ add_library(dorado_secondary_features
 )
 
 target_include_directories(dorado_secondary_features
-    INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/features
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 target_link_libraries(dorado_secondary_features
