[DOR-1265] Apply new structure to dorado_secondary
This also required splitting out dorado_secondary_common into its own
target that forms a common base for the other libs.

--- a/dorado/secondary/CMakeLists.txt
+++ b/dorado/secondary/CMakeLists.txt
@@ -1,43 +1,13 @@
 add_subdirectory(architectures)
 add_subdirectory(consensus)
 add_subdirectory(features)
+add_subdirectory(common)
 
-add_library(dorado_secondary
-    bam_file.cpp
-    bam_file.h
-    bam_info.cpp
-    bam_info.h
-    batching.cpp
-    batching.h
-    interval.h
-    region.cpp
-    region.h
-    stats.h
-    variant.cpp
-    variant.h
-    vcf_writer.cpp
-    vcf_writer.h
-)
-
-target_include_directories(dorado_secondary
-    INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}/..
-)
-
+add_library(dorado_secondary INTERFACE)
 target_link_libraries(dorado_secondary
-    PUBLIC
+    INTERFACE
         dorado_secondary_architectures
+        dorado_secondary_common
         dorado_secondary_consensus
         dorado_secondary_features
-        dorado_torch_utils
-        dorado_utils
-    PRIVATE
-        cxxpool
-        dorado_version
-        htslib
-        intervaltree
-        kadayashi::haplotag_lib
-        spdlog::spdlog
 )
-
-enable_warnings_as_errors(dorado_secondary)
