[DOR-1265] Make NVTX into a target
This appears to be have been used everywhere because utils makes use of
it in a header.

--- a/dorado/3rdparty/CMakeLists.txt
+++ b/dorado/3rdparty/CMakeLists.txt
@@ -73,6 +73,12 @@ endif()
 # Disable warnings from minimap source
 disable_warnings(minimap2)
 
+# NVTX
+add_library(nvtx INTERFACE)
+target_include_directories(nvtx SYSTEM INTERFACE
+    ${DORADO_3RD_PARTY_SOURCE}/NVTX/c/include
+)
+
 # edlib
 apply_3rdparty_patch(edlib)
 set(BUILD_TESTING OFF)
