[DOR-1265] Avoid compiling KoiUtils on macOS
Also remove CUDA guards in WorkingMemory because they're unused.

--- a/dorado/nn/CMakeLists.txt
+++ b/dorado/nn/CMakeLists.txt
@@ -3,7 +3,6 @@ add_library(dorado_nn STATIC
     ConvStack.h
     CRFModules.cpp
     CRFModules.h
-    KoiUtils.cpp
     KoiUtils.h
     LinearUpsample.cpp
     LinearUpsample.h
@@ -13,15 +12,13 @@ add_library(dorado_nn STATIC
     TxModules.h
     WorkingMemory.cpp
     WorkingMemory.h
+    metal/MetalModules.h
 )
 
-
 if (APPLE)
-    target_sources(dorado_nn
-        PRIVATE
-        metal/MetalModules.cpp
-        metal/MetalModules.h
-    )
+    target_sources(dorado_nn PRIVATE metal/MetalModules.cpp)
+else()
+    target_sources(dorado_nn PRIVATE KoiUtils.cpp)
 endif()
 
 target_link_libraries(dorado_nn
