--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -129,18 +129,19 @@ foreach(TEST_BIN dorado_tests dorado_smoke_tests)
 
     target_link_libraries(${TEST_BIN}
         PRIVATE
-            dorado_tests_common
-            dorado_lib
-            dorado_models_lib
-            dorado_model_downloader_lib
             dorado_basecall
-            dorado_modbase
-            dorado_secondary
-            minimap2
-            ${ZLIB_LIBRARIES}
-            dorado_io_lib
             dorado_file_info
+            dorado_io_lib
+            dorado_lib
+            dorado_modbase
+            dorado_model_downloader_lib
+            dorado_models_lib
+            dorado_nn
+            dorado_secondary
+            dorado_tests_common
+            minimap2
             toml11::toml11
+            ${ZLIB_LIBRARIES}
     )
 
     enable_warnings_as_errors(${TEST_BIN})
