--- a/dorado/nn/CMakeLists.txt
+++ b/dorado/nn/CMakeLists.txt
@@ -1,22 +1,25 @@
 add_library(dorado_nn STATIC
+    # Public
+    include/nn/ConvStack.h
+    include/nn/CRFModules.h
+    include/nn/KoiUtils.h
+    include/nn/LinearUpsample.h
+    include/nn/LSTMStack.h
+    include/nn/MetalModules.h
+    include/nn/TxModules.h
+    include/nn/WorkingMemory.h
+
+    # Private
     ConvStack.cpp
-    ConvStack.h
     CRFModules.cpp
-    CRFModules.h
-    KoiUtils.h
     LinearUpsample.cpp
-    LinearUpsample.h
     LSTMStack.cpp
-    LSTMStack.h
     TxModules.cpp
-    TxModules.h
     WorkingMemory.cpp
-    WorkingMemory.h
-    metal/MetalModules.h
 )
 
 if (APPLE)
-    target_sources(dorado_nn PRIVATE metal/MetalModules.cpp)
+    target_sources(dorado_nn PRIVATE MetalModules.cpp)
 else()
     target_sources(dorado_nn PRIVATE KoiUtils.cpp)
 endif()
@@ -35,6 +38,11 @@ target_link_libraries(dorado_nn
 if (TARGET koi)
     target_link_libraries(dorado_nn PRIVATE koi)
 endif()
+
+target_include_directories(dorado_nn
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
 enable_warnings_as_errors(dorado_nn)
 
