--- a/dorado/poly_tail/CMakeLists.txt
+++ b/dorado/poly_tail/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(dorado_poly_tail
     PUBLIC
         dorado_utils
     PRIVATE
-        dorado_models_lib # TODO: remove this once pipeline target exists
+        dorado_read_pipeline_base
         dorado_torch_utils
         edlib
         spdlog::spdlog
@@ -30,8 +30,6 @@ target_link_libraries(dorado_poly_tail
 target_include_directories(dorado_poly_tail
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/.. # TODO: remove this once pipeline target exists
 )
 
 enable_warnings_as_errors(dorado_poly_tail)
