[DOR-1265] Move all nodes into a separate target

--- a/dorado/read_pipeline/CMakeLists.txt
+++ b/dorado/read_pipeline/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_subdirectory(base)
+add_subdirectory(nodes)
 
 add_library(dorado_read_pipeline INTERFACE)
 target_link_libraries(dorado_read_pipeline
     INTERFACE
         dorado_read_pipeline_base
+        dorado_read_pipeline_nodes
 )
