[DOR-1265] Move and rename CorrectionMapper and CorrectionPafReader
There aren't nodes so they shouldn't be named as such.

--- a/dorado/cli/CMakeLists.txt
+++ b/dorado/cli/CMakeLists.txt
@@ -7,6 +7,11 @@ add_executable(dorado
     basecaller.cpp
     cli.h
     correct.cpp
+    CorrectionAligner.h
+    CorrectionMapper.cpp
+    CorrectionMapper.h
+    CorrectionPafReader.cpp
+    CorrectionPafReader.h
     demux.cpp
     download.cpp
     duplex.cpp
